--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "node ./dist/index.js"
   },
   "dependencies": {
+    "body-parser": "^1.20.3",
     "express": "^4.21.2"
   },
   "devDependencies": {
