--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "compile": "tsc -w",
     "dev": "nodemon ./dist/index.js",
     "build": "tsc",
-    "start": "node ./dist/index.js"
+    "start": "node ./dist/index.js",
+    "test": "jest"
   },
   "dependencies": {
     "body-parser": "^1.20.3",
@@ -15,8 +16,13 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.13.9",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.9",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.6",
     "typescript": "^5.8.2"
   }
 }
