--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "mongodb": "^6.15.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.9",
