--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "compile": "tsc -w",
-    "dev": "nodemon ./dist/index.js",
+    "dev": "nodemon  ./dist/index.js",
     "build": "tsc",
     "start": "node ./dist/index.js",
     "test": "jest"
@@ -15,12 +15,15 @@
     "body-parser": "^1.20.3",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.15.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/mongodb": "^4.0.7",
     "@types/node": "^22.13.9",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
